--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <title>Christina Chance</title>
+  <link rel="icon" type="image/x-icon" href="/images/favicon.ico">
   <meta name="description" content="">
   <link href="//fonts.googleapis.com/css?family=Raleway:100,400,300,600" rel="stylesheet" type="text/css">
   <!--<link href="//fonts.googleapis.com/css?family=Lato:100,200,400,300,600" rel="stylesheet" type="text/css">-->
