--- a/index.html
+++ b/index.html
@@ -7,17 +7,13 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <title>Christina Chance</title>
-  <link rel="icon" type="image/x-icon" href="/images/favicon.png">
+  <link rel="icon" type="image/x-icon" href="assets/images/favicon.png">
   <meta name="description" content="">
   <link href="//fonts.googleapis.com/css?family=Raleway:100,400,300,600" rel="stylesheet" type="text/css">
-  <!--<link href="//fonts.googleapis.com/css?family=Lato:100,200,400,300,600" rel="stylesheet" type="text/css">-->
   <link href='https://fonts.googleapis.com/css?family=PT+Sans:400,700,400italic,700italic|Source+Sans+Pro:400,700,200,300|Josefin+Sans:400,600,700,300' rel='stylesheet' type='text/css'>
   <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css" rel="stylesheet">
-  <!--<link rel="icon" href="/assets/img/stanford-favicon.png" type="image/x-icon">-->
 
   <link rel="stylesheet" href="assets/css/style.css">
-  <!--<link rel="canonical" href="http://cs.stanford.edu/~kamatha/">-->
-  <!--<link rel="alternate" type="application/rss+xml" title="Christina Chance" href="http://cs.stanford.edu/~kamatha/feed.xml">-->
 </head>
 
 
@@ -25,11 +21,10 @@
       <div class="wrapper">
         <div class="home" style="margin-top:40px">
   <div>
-    <!-- <img alt="image" style="width:180px;float:left;margin-bottom:20px;margin-right:20px;border-radius:100px;" src="assets/images/ChristinaChanceHeadshot.jpeg"> -->
-    <img alt="image" style="width:180px;float:left;margin-bottom:20px;margin-right:20px;border-radius:100px;" src="assets/images/headshot.jpeg">
-
+    <!-- For circle:  -->
+    <!-- <img alt="image" style="width:180px;float:left;margin-bottom:20px;margin-right:20px;border-radius:100px;" src="assets/images/headshot.jpeg"> -->
     <!-- For square:  -->
-    <!--<img alt="image" style="width:180px;float:left;margin-bottom:20px;margin-right:20px;" src="assets/images/AmitaKamath.jpg">-->
+    <img alt="image" style="width:180px;float:left;margin-bottom:20px;margin-right:20px;" src="assets/images/headshot.jpeg">
   </div>
   <div>
     <h1>Christina Chance</h1>
@@ -47,7 +42,7 @@
       I am supported by the <a href="https://grad.ucla.edu/funding/financial-aid/funding-for-entering-students/eugene-v-cota-robles-fellowship/">Eugene V. Cota-Robles Fellowship</a>. 
     My research interests are in NLP fairness and robustness, specifically for low resource languages.</p>
     <p>
-      Previously, I received my Bachelors of Science in Computer Science and Mathematics from Emory University in 2022. 
+      Previously, I received my Bachelors of Science in Computer Science and Mathematics with a minor in Physics from Emory University in 2022. 
     </p>
   </div>
 </div>
@@ -72,8 +67,8 @@
     <div>
       <p>
         <ul>
-	  <li> In Spring 2022, I was a TA for <a href="http://www.cs.emory.edu/~nelsay2/cs377.html">CS377</a> (Database Systems), taught by <a href="http://www.cs.emory.edu/~nelsay2/">Dr. Nosayba El-Sayed</a>.
-	       I worked with a team of 1 other TA and about 40 students, helped grade assigments, and host office hours to support students.</li>
+          <li> In Spring 2022, I was a TA for <a href="http://www.cs.emory.edu/~nelsay2/cs377.html">CS377</a> (Database Systems), taught by <a href="http://www.cs.emory.edu/~nelsay2/">Dr. Nosayba El-Sayed</a>.
+              I worked with a team of 1 other TA and about 40 students, helped grade assigments, and host office hours to support students.</li>
         </ul>
       </p>
     </div>
@@ -85,8 +80,10 @@
   <div>
     <p>
       <ul>
-	<li> Co-Founder and President of Black and Latinx in STEM, Spring 2020 to Spring 2022.</li>
-	<li> Vice President of Student Affairs for Emory University's College Council, Fall 2021 to Spring 2022.</li>
+        <li> UCLA's Graduate Women in Computer Science Treasurer, Fall 2022 to present.</li>
+        <li> UCLA's Black Graduadte Studets Association Historian, Fall 2022 to present.</li>
+        <li> Co-Founder and President of Black and Latinx in STEM, Spring 2020 to Spring 2022.</li>
+        <li> Vice President of Student Affairs for Emory University's College Council, Fall 2021 to Spring 2022.</li>
       </ul>
     </p>
   </div>
@@ -97,15 +94,30 @@
   <div>
     <p>
       <ul>
-	<li> Eugene V. Cota-Robles Fellowship, UCLA 2022.</li>
-	<li> CS Department Outstanding Student of the Year, Emory University 2021-2022. </li>
-  <li> 100 Senior Honorary, Emory University 2022. </li>
-  <li> Ron Brown Captain.</li>
+        <li> Eugene V. Cota-Robles Fellowship, UCLA 2022.</li>
+        <li> CS Department Outstanding Student of the Year, Emory University 2021-2022. </li>
+        <li> 100 Senior Honorary, Emory University 2022. </li>
+      </ul>
+    </p>
+  </div>
+</div>
+
+<div>
+  <h2>AFFILIATIONS</h2>
+  <div>
+    <p>
+      <ul>
+        <li> Alpha Kappa Alpha Sorority, Incorporated</li>
+        <li> Initiative for Maximizing Student Development Scholar.</li>
+        <li> Omicron Delta Kappa. </li>
+        <li> Alpha Sigma Chapter of Eta Sigma Pi. </li>
+        <li> Ron Brown Captain.</li>
 
       </ul>
     </p>
   </div>
 </div>
+
 <br>
 
 
