--- a/index.html
+++ b/index.html
@@ -112,6 +112,7 @@
         <li> Omicron Delta Kappa. </li>
         <li> Alpha Sigma Chapter of Eta Sigma Pi. </li>
         <li> Ron Brown Captain.</li>
+	<li> Leap PhD Fellow.</li>
 
       </ul>
     </p>
