--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
           <span class="title" style="font-weight:400">Zoom Audio Transcription Accuracy for African American Vernacular English
           </span>
           </span>
-          <span>Christina Chance, Dorian Arnold</span>
+          <span>Christina Chance, <a href="http://www.cs.emory.edu/~darnold/">Dorian Arnold</a></span>
           <span>Honor's Thesis (High Honors)</span>
           <span>[<a href="/assets/documents/thesis.pdf">PDF</a>]</span>
       </p>
