--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <h1>Christina Chance</h1>
     <p>cchance [at] cs.ucla.edu</p>
     <p>
-	<a href="https://github.com/christinachance/">Github</a> | <a href="https://www.linkedin.com/in/christina-chance-147666166/">LinkedIn</a> | <a href="https://twitter.com/christinachanc">Twitter</a> | <a href="/assets/documents/cv.pdf">CV</a>
+	<a href="https://github.com/christinachance/" target="_blank" rel="noopener noreferrer">Github</a> | <a href="https://www.linkedin.com/in/christina-chance-147666166/" target="_blank" rel="noopener noreferrer">LinkedIn</a> | <a href="https://twitter.com/christinachanc" target="_blank" rel="noopener noreferrer">Twitter</a> | <a href="/assets/documents/cv.pdf" target="_blank" rel="noopener noreferrer">CV</a>
     </p>
   </div>
 </div>
@@ -38,8 +38,8 @@
 <div style="clear:left">
   <h2>BIO</h2>
   <div>
-    <p> I am a first-year PhD student in Computer Science at the University of California, Los Angeles advised by <a href="http://web.cs.ucla.edu/~kwchang/">Kai-Wei Chang</a>. 
-      I am supported by the <a href="https://grad.ucla.edu/funding/financial-aid/funding-for-entering-students/eugene-v-cota-robles-fellowship/">Eugene V. Cota-Robles Fellowship</a>. 
+    <p> I am a first-year PhD student in Computer Science at the University of California, Los Angeles advised by <a href="http://web.cs.ucla.edu/~kwchang/" target="_blank" rel="noopener noreferrer">Kai-Wei Chang</a>. 
+      I am supported by the <a href="https://grad.ucla.edu/funding/financial-aid/funding-for-entering-students/eugene-v-cota-robles-fellowship/" target="_blank" rel="noopener noreferrer">Eugene V. Cota-Robles Fellowship</a>. 
     My research interests are in NLP fairness and robustness, specifically for low resource languages.</p>
     <p>
       Previously, I received my Bachelors of Science in Computer Science and Mathematics with a minor in Physics from Emory University in 2022. 
@@ -54,9 +54,9 @@
           <span class="title" style="font-weight:400">Zoom Audio Transcription Accuracy for African American Vernacular English
           </span>
           </span>
-          <span>Christina Chance, <a href="http://www.cs.emory.edu/~darnold/">Dorian Arnold</a></span>
+          <span>Christina Chance, <a href="http://www.cs.emory.edu/~darnold/" target="_blank" rel="noopener noreferrer">Dorian Arnold</a></span>
           <span>Honor's Thesis (High Honors)</span>
-          <span>[<a href="/assets/documents/thesis.pdf">PDF</a>]</span>
+          <span>[<a href="/assets/documents/thesis.pdf" target="_blank" rel="noopener noreferrer">PDF</a>]</span>
       </p>
 
   </div>
@@ -67,7 +67,7 @@
     <div>
       <p>
         <ul>
-          <li> In Spring 2022, I was a TA for <a href="http://www.cs.emory.edu/~nelsay2/cs377.html">CS377</a> (Database Systems), taught by <a href="http://www.cs.emory.edu/~nelsay2/">Dr. Nosayba El-Sayed</a>.
+          <li> In Spring 2022, I was a TA for <a href="http://www.cs.emory.edu/~nelsay2/cs377.html" target="_blank" rel="noopener noreferrer">CS377</a> (Database Systems), taught by <a href="http://www.cs.emory.edu/~nelsay2/" target="_blank" rel="noopener noreferrer">Dr. Nosayba El-Sayed</a>.
               I worked with a team of 1 other TA and about 40 students, helped grade assigments, and host office hours to support students.</li>
         </ul>
       </p>
@@ -123,7 +123,7 @@
 
 
 <div>
-	<p><i>Acknowledgement: This website uses the design and template from <a href="https://cs.stanford.edu/~ssagawa/">Shiori Sagawa</a> and <a href="https://amitakamath.github.io/">Amita Kamath</a>.</i></p>
+	<p><i>Acknowledgement: This website uses the design and template from <a href="https://cs.stanford.edu/~ssagawa/" target="_blank" rel="noopener noreferrer">Shiori Sagawa</a> and <a href="https://amitakamath.github.io/" target="_blank" rel="noopener noreferrer">Amita Kamath</a>.</i></p>
 </div>
 
 <br>
