--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
     <p>
       <ul>
         <li> UCLA's Graduate Women in Computer Science Treasurer, Fall 2022 to present.</li>
-        <li> UCLA's Black Graduadte Studets Association Historian, Fall 2022 to present.</li>
+        <li> UCLA's Black Graduadte Studets Association Historian, Fall 2022 to Spring 2023.</li>
         <li> Co-Founder and President of Black and Latinx in STEM, Spring 2020 to Spring 2022.</li>
         <li> Vice President of Student Affairs for Emory University's College Council, Fall 2021 to Spring 2022.</li>
       </ul>
