--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
   <div>
     <p>
       <ul>
-        <li> Alpha Kappa Alpha Sorority, Incorporated</li>
+        <li> Alpha Kappa Alpha Sorority, Incorporated.</li>
         <li> Initiative for Maximizing Student Development Scholar.</li>
         <li> Omicron Delta Kappa. </li>
         <li> Alpha Sigma Chapter of Eta Sigma Pi. </li>
