--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
       I am supported by the <a href="https://grad.ucla.edu/funding/financial-aid/funding-for-entering-students/eugene-v-cota-robles-fellowship/" target="_blank" rel="noopener noreferrer">Eugene V. Cota-Robles Fellowship</a>. 
     My research interests are in NLP fairness and robustness, with a specific interest in content moderation and hate speech.</p>
     <p>
-      Previously, I received my Bachelors of Science in Computer Science and Mathematics with a minor in Physics from Emory University in 2022. 
+      Previously, I received my Bachelor of Science in Computer Science and Mathematics with a minor in Physics from Emory University in 2022. 
     </p>
   </div>
 </div>
@@ -68,7 +68,7 @@
       <p>
         <ul>
           <li> In Spring 2022, I was a TA for <a href="http://www.cs.emory.edu/~nelsay2/cs377.html" target="_blank" rel="noopener noreferrer">CS377</a> (Database Systems), taught by <a href="http://www.cs.emory.edu/~nelsay2/" target="_blank" rel="noopener noreferrer">Dr. Nosayba El-Sayed</a>.
-              I worked with a team of 1 other TA and about 40 students, helped grade assigments, and host office hours to support students.</li>
+              I worked with a team of 1 other TA and about 40 students, helped grade assignments, and hosted office hours to support students.</li>
         </ul>
       </p>
     </div>
@@ -76,12 +76,14 @@
 
 
 <div>
-  <h2>SERVICE</h2>
+  <h2>VOLUNTEERING & SERVICE</h2>
   <div>
     <p>
       <ul>
+	<li> ACM SIGKDD 2023 Equity, Diversity, & Inclusion <a href="https://sites.google.com/g.ucla.edu/kdd2023" target="_blank" rel="noopener noreferrer">(EDI)</a> Day Organizer. </li>
+	<li> ACM FAccT 2023 Volunteer. <\li>
         <li> UCLA's Graduate Women in Computer Science Treasurer, Fall 2022 to present.</li>
-        <li> UCLA's Black Graduadte Studets Association Historian, Fall 2022 to Spring 2023.</li>
+        <li> UCLA's Black Graduate Student Association Historian, Fall 2022 to Spring 2023.</li>
         <li> Co-Founder and President of Black and Latinx in STEM, Spring 2020 to Spring 2022.</li>
         <li> Vice President of Student Affairs for Emory University's College Council, Fall 2021 to Spring 2022.</li>
       </ul>
