--- a/index.html
+++ b/index.html
@@ -76,12 +76,12 @@
 
 
 <div>
-  <h2>VOLUNTEERING & SERVICE</h2>
+  <h2>SERVICE</h2>
   <div>
     <p>
       <ul>
 	<li> ACM SIGKDD 2023 Equity, Diversity, & Inclusion <a href="https://sites.google.com/g.ucla.edu/kdd2023" target="_blank" rel="noopener noreferrer">(EDI)</a> Day Organizer. </li>
-	<li> ACM FAccT 2023 Volunteer. <\li>
+	<li> ACM FAccT 2023 Volunteer. </li>
         <li> UCLA's Graduate Women in Computer Science Treasurer, Fall 2022 to present.</li>
         <li> UCLA's Black Graduate Student Association Historian, Fall 2022 to Spring 2023.</li>
         <li> Co-Founder and President of Black and Latinx in STEM, Spring 2020 to Spring 2022.</li>
