--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
           </span>
           <span>Christina Chance, <a href="http://www.cs.emory.edu/~darnold/" target="_blank" rel="noopener noreferrer">Dorian Arnold</a></span>
           <span>Honor's Thesis (High Honors)</span>
-          <span>[<a href="/assets/documents/thesis.pdf" target="_blank" rel="noopener noreferrer">PDF</a>]</span>
+          <span>[<a href="https://etd.library.emory.edu/concern/etds/3n2040522" target="_blank" rel="noopener noreferrer">PDF</a>]</span>
       </p>
 
   </div>
