--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
   <div>
     <p> I am a first-year PhD student in Computer Science at the University of California, Los Angeles advised by <a href="http://web.cs.ucla.edu/~kwchang/" target="_blank" rel="noopener noreferrer">Kai-Wei Chang</a>. 
       I am supported by the <a href="https://grad.ucla.edu/funding/financial-aid/funding-for-entering-students/eugene-v-cota-robles-fellowship/" target="_blank" rel="noopener noreferrer">Eugene V. Cota-Robles Fellowship</a>. 
-    My research interests are in NLP fairness and robustness, with a specific interest in content moderation and hate speech.</p>
+    My research interests are in NLP fairness and robustness, specifically in the debiasing and mitigation of social biases in text data across various domains and fields.</p>
     <p>
       Previously, I received my Bachelor of Science in Computer Science and Mathematics with a minor in Physics from Emory University in 2022. 
     </p>
