--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 <div style="clear:left">
   <h2>BIO</h2>
   <div>
-    <p> I am a first-year PhD student in Computer Science at the University of California, Los Angeles advised by <a href="http://web.cs.ucla.edu/~kwchang/" target="_blank" rel="noopener noreferrer">Kai-Wei Chang</a>. 
+    <p> I am a second-year PhD student in Computer Science at the University of California, Los Angeles advised by <a href="http://web.cs.ucla.edu/~kwchang/" target="_blank" rel="noopener noreferrer">Kai-Wei Chang</a>. 
       I am supported by the <a href="https://grad.ucla.edu/funding/financial-aid/funding-for-entering-students/eugene-v-cota-robles-fellowship/" target="_blank" rel="noopener noreferrer">Eugene V. Cota-Robles Fellowship</a>. 
     My research interests are in NLP fairness and robustness, specifically in the debiasing and mitigation of social biases in text data across various domains and fields.</p>
     <p>
@@ -51,6 +51,19 @@
   <h2>SELECTED PUBLICATIONS</h2>
   <div>
       <p class="paper">
+	  <span class="title" style="font-weight:400">Will the Prince Get True Love’s Kiss? On the Model Sensitivity to Gender Perturbation over
+Fairytale Texts 
+          </span>
+          </span>
+          <span>Christina Chance, Da Yin, Dakuo Wang, Kai-Wei Chang</a></span>
+          <span>[<a href="https://arxiv.org/abs/2310.10865" target="_blank" rel="noopener noreferrer">PDF</a>]</span>
+
+	  <span class="title" style="font-weight:400">Leveraging Language Models to Detect Greenwashing
+          </span>
+          </span>
+          <span>Avalon Vinella*, Margaret Capetz*, Rebecca Pattichis*, Christina Chance*, Reshmi Ghosh</a></span>
+          <span>[<a href="https://arxiv.org/abs/2311.01469" target="_blank" rel="noopener noreferrer">PDF</a>]</span>
+	  
           <span class="title" style="font-weight:400">Zoom Audio Transcription Accuracy for African American Vernacular English
           </span>
           </span>
