--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <h1>Christina Chance</h1>
     <p>cchance [at] cs.ucla.edu</p>
     <p>
-	<a href="https://github.com/christinachance/" target="_blank" rel="noopener noreferrer">Github</a> | <a href="https://www.linkedin.com/in/christina-chance-147666166/" target="_blank" rel="noopener noreferrer">LinkedIn</a> | <a href="https://twitter.com/christinachanc" target="_blank" rel="noopener noreferrer">Twitter</a> | <a href="/assets/documents/Christina_Chance_CV.pdf" target="_blank" rel="noopener noreferrer">CV</a>
+	<a href="https://github.com/christinachance/" target="_blank" rel="noopener noreferrer">Github</a> | <a href="https://www.linkedin.com/in/christina-chance-147666166/" target="_blank" rel="noopener noreferrer">LinkedIn</a> | <a href="https://twitter.com/christinachanc" target="_blank" rel="noopener noreferrer">Twitter</a> | <a href="/assets/documents/Christina_Chance_CV(1).pdf" target="_blank" rel="noopener noreferrer">CV</a>
     </p>
   </div>
 </div>
