--- a/index.html
+++ b/index.html
@@ -51,6 +51,12 @@
   <h2>SELECTED PUBLICATIONS</h2>
   <div>
       <p class="paper">
+	  <span class="title" style="font-weight:400">An Analysis of Large Language Models for African American English Speaking Children’s Oral Language Assessment
+          </span>
+          </span>
+          <span>Alexander Johnson, Christina Chance, Kaycee Stiemke, Hariram Veeramani, Natarajan Balaji Shankar, Abeer Alwan</a></span>
+          <span>[<a href="https://nsbejournal.scholasticahq.com/article/92286-an-analysis-of-large-language-models-for-african-american-english-speaking-children-s-oral-language-assessment" target="_blank" rel="noopener noreferrer">PDF</a>]</span>
+	
 	  <span class="title" style="font-weight:400">Will the Prince Get True Love’s Kiss? On the Model Sensitivity to Gender Perturbation over
 Fairytale Texts 
           </span>
@@ -70,6 +76,7 @@ Fairytale Texts
           <span>Christina Chance, <a href="http://www.cs.emory.edu/~darnold/" target="_blank" rel="noopener noreferrer">Dorian Arnold</a></span>
           <span>Honor's Thesis (High Honors)</span>
           <span>[<a href="https://etd.library.emory.edu/concern/etds/3n2040522" target="_blank" rel="noopener noreferrer">PDF</a>]</span>
+
       </p>
 
   </div>
