--- a/index.html
+++ b/index.html
@@ -87,9 +87,9 @@ Fairytale Texts
     <div>
       <p>
         <ul>
+	  <li> In Winter 2024 at UCLA, I was a TA for CS162 (Natural Language Processing), taught by Prof. Nanyun (Violet) Peng. I worked with a team of 1 other TA and about 130 students, helped create and grade assignments, exams, and course project, led weekly discussion sections, and hosted office hours to support students. </li>li
 	  <li> In Fall 2023 at UCLA, I was a TA for CS30 (Principles and Practices of Computing), taught by Prof. Todd Millstein. I worked with a team of 1 other TA, 2 LAs, and about 120 students, helped grade assignments, hosted office hours, and led a weekly discussion section.</li>
-          <li> In Spring 2022 at Emory University, I was a TA for <a href="http://www.cs.emory.edu/~nelsay2/cs377.html" target="_blank" rel="noopener noreferrer">CS377</a> (Database Systems), taught by <a href="http://www.cs.emory.edu/~nelsay2/" target="_blank" rel="noopener noreferrer">Dr. Nosayba El-Sayed</a>.
-              I worked with a team of 1 other TA and about 40 students, helped grade assignments, and hosted office hours to support students.</li>
+          <li> In Spring 2022 at Emory University, I was a TA for <a href="http://www.cs.emory.edu/~nelsay2/cs377.html" target="_blank" rel="noopener noreferrer">CS377</a> (Database Systems), taught by <a href="http://www.cs.emory.edu/~nelsay2/" target="_blank" rel="noopener noreferrer">Prof. Nosayba El-Sayed</a>. I worked with a team of 1 other TA and about 40 students, helped grade assignments, and hosted office hours to support students.</li>
         </ul>
       </p>
     </div>
@@ -104,7 +104,7 @@ Fairytale Texts
 	<li> ACM SIGKDD 2023 Equity, Diversity, & Inclusion <a href="https://sites.google.com/g.ucla.edu/kdd2023" target="_blank" rel="noopener noreferrer">(EDI)</a> Day Organizer. </li>
 	<li> ACM FAccT 2023 Volunteer. </li>
         <li> UCLA's Graduate Women in Computer Science Treasurer, Fall 2022 to present.</li>
-        <li> UCLA's Black Graduate Student Association Historian, Fall 2022 to present.</li>
+        <li> UCLA's Black Graduate Student Association Historian & Treasurer, Fall 2022 to present.</li>
         <li> Co-Founder and President of Black and Latinx in STEM, Spring 2020 to Spring 2022.</li>
         <li> Vice President of Student Affairs for Emory University's College Council, Fall 2021 to Spring 2022.</li>
       </ul>
