--- a/index.html
+++ b/index.html
@@ -56,6 +56,12 @@
           </span>
           <span>Alexander Johnson, Christina Chance, Kaycee Stiemke, Hariram Veeramani, Natarajan Balaji Shankar, Abeer Alwan</a></span>
           <span>[<a href="https://nsbejournal.scholasticahq.com/article/92286-an-analysis-of-large-language-models-for-african-american-english-speaking-children-s-oral-language-assessment" target="_blank" rel="noopener noreferrer">PDF</a>]</span>
+
+	<span class="title" style="font-weight:400">CORAAL QA: A Dataset and Framework for Open Domain Spontaneous Speech Question Answering from Long Audio Files 
+          </span>
+          </span>
+          <span>Natarajan Balaji Shankar, Alexander Johnson, Christina Chance, Hariram Veeramani, Abeer Alwan</a></span>
+          <span>[ICASSP 2024]</span>
 	
 	  <span class="title" style="font-weight:400">Will the Prince Get True Love’s Kiss? On the Model Sensitivity to Gender Perturbation over
 Fairytale Texts 
