--- a/index.html
+++ b/index.html
@@ -93,7 +93,8 @@ Fairytale Texts
     <div>
       <p>
         <ul>
-	  <li> In Winter 2024 at UCLA, I was a TA for CS162 (Natural Language Processing), taught by Prof. Nanyun (Violet) Peng. I worked with a team of 1 other TA and about 130 students, helped create and grade assignments, exams, and course project, led weekly discussion sections, and hosted office hours to support students. </li>li
+	  <li> In Spring 2024 at UCLA, I was a TA for CS263 (Natural Language Processing), taught by Prof. Nanyun (Violet) Peng. I worked with a team of 3 other TA and about 110 students, helped create and grade assignments, exams, and course project, led weekly discussion sections, and hosted office hours to support students. </li>
+	  <li> In Winter 2024 at UCLA, I was a TA for CS162 (Natural Language Processing), taught by Prof. Nanyun (Violet) Peng. I worked with a team of 1 other TA and about 130 students, helped create and grade assignments, exams, and course project, led weekly discussion sections, and hosted office hours to support students. </li>
 	  <li> In Fall 2023 at UCLA, I was a TA for CS30 (Principles and Practices of Computing), taught by Prof. Todd Millstein. I worked with a team of 1 other TA, 2 LAs, and about 120 students, helped grade assignments, hosted office hours, and led a weekly discussion section.</li>
           <li> In Spring 2022 at Emory University, I was a TA for <a href="http://www.cs.emory.edu/~nelsay2/cs377.html" target="_blank" rel="noopener noreferrer">CS377</a> (Database Systems), taught by <a href="http://www.cs.emory.edu/~nelsay2/" target="_blank" rel="noopener noreferrer">Prof. Nosayba El-Sayed</a>. I worked with a team of 1 other TA and about 40 students, helped grade assignments, and hosted office hours to support students.</li>
         </ul>
