--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 <div style="clear:left">
   <h2>BIO</h2>
   <div>
-    <p> I am a second-year PhD student in Computer Science at the University of California, Los Angeles advised by <a href="http://web.cs.ucla.edu/~kwchang/" target="_blank" rel="noopener noreferrer">Kai-Wei Chang</a>. 
+    <p> I am a third-year PhD student in Computer Science at the University of California, Los Angeles advised by <a href="http://web.cs.ucla.edu/~kwchang/" target="_blank" rel="noopener noreferrer">Kai-Wei Chang</a>. 
       I am supported by the <a href="https://grad.ucla.edu/funding/financial-aid/funding-for-entering-students/eugene-v-cota-robles-fellowship/" target="_blank" rel="noopener noreferrer">Eugene V. Cota-Robles Fellowship</a>. 
     My research interests are in NLP fairness and robustness, specifically in develeloping quantification and mitigation techniques for social biases in text data across various domains and fields.</p>
     <p>
