--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
   <div>
     <p> I am a third-year PhD student in Computer Science at the University of California, Los Angeles advised by <a href="http://web.cs.ucla.edu/~kwchang/" target="_blank" rel="noopener noreferrer">Kai-Wei Chang</a>. 
       I am supported by the <a href="https://grad.ucla.edu/funding/financial-aid/funding-for-entering-students/eugene-v-cota-robles-fellowship/" target="_blank" rel="noopener noreferrer">Eugene V. Cota-Robles Fellowship</a>. 
-    My research interests are in NLP fairness and robustness, specifically in develeloping quantification and mitigation techniques for social biases in text data across various domains and fields.</p>
+      My research focuses on (1) the application of NLP methodologies for bias mitigation and quantification in social science, (2) the study of dialectical biases in existing machine learning systems, and (3) the assessment and development of community grounded content moderation approaches. This culminates under the goal of engaging with, studying, assessing, and critiquing socio-technical systems that people engage with in their everyday lives as well as developing more inclusive and equitable systems.</p>
     <p>
       Previously, I received my Bachelor of Science in Computer Science and Mathematics with a minor in Physics from Emory University in 2022. 
     </p>
