--- a/index.html
+++ b/index.html
@@ -38,11 +38,11 @@
 <div style="clear:left">
   <h2>BIO</h2>
   <div>
-    <p> I am a third-year PhD student in Computer Science at the University of California, Los Angeles advised by <a href="http://web.cs.ucla.edu/~kwchang/" target="_blank" rel="noopener noreferrer">Kai-Wei Chang</a>. 
-      I am supported by the <a href="https://grad.ucla.edu/funding/financial-aid/funding-for-entering-students/eugene-v-cota-robles-fellowship/" target="_blank" rel="noopener noreferrer">Eugene V. Cota-Robles Fellowship</a>. 
+    <p> I am a fourth-year PhD candidate in Computer Science at the University of California, Los Angeles advised by <a href="http://web.cs.ucla.edu/~kwchang/" target="_blank" rel="noopener noreferrer">Kai-Wei Chang</a>. 
+      I am supported by the <a href="https://grad.ucla.edu/funding/financial-aid/funding-for-entering-students/eugene-v-cota-robles-fellowship/" target="_blank" rel="noopener noreferrer">Eugene V. Cota-Robles Fellowship</a> and the <a href="https://www.gemfellowship.org/">GEM Fellowship Program</a>. 
       My research focuses on (1) the application of NLP methodologies for bias mitigation and quantification in social science, (2) the study of dialectical biases in existing machine learning systems, and (3) the assessment and development of community grounded content moderation approaches. This culminates under the goal of engaging with, studying, assessing, and critiquing socio-technical systems that people engage with in their everyday lives as well as developing more inclusive and equitable systems.</p>
     <p>
-      Previously, I received my Bachelor of Science in Computer Science and Mathematics with a minor in Physics from Emory University in 2022. 
+      Previously, I received a Bachelor of Science in Computer Science and Mathematics with a minor in Physics from Emory University in 2022 and a Master of Science in Computer Science from the University of California, Los Angeles in 2025. 
     </p>
   </div>
 </div>
@@ -51,32 +51,42 @@
   <h2>SELECTED PUBLICATIONS</h2>
   <div>
       <p class="paper">
+	  <span class="title" style="font-weight:400">Re-imagining Virtual Communities: Ethical Guidelines for Studying Black Twitter
+          </span>
+          </span>
+          <span>Christina Chance, Kai-Wei Chang</a></span>
+	  	  <span>AIES 2025</span>
+<!--           <span>[<a href="https://nsbejournal.scholasticahq.com/article/92286-an-analysis-of-large-language-models-for-african-american-english-speaking-children-s-oral-language-assessment" target="_blank" rel="noopener noreferrer">PDF</a>]</span>
+		   -->
+	  <span class="title" style="font-weight:400">Will the Prince Get True Love’s Kiss? On the Model Sensitivity to Gender Perturbation over Fairytale Texts 
+          </span>
+          </span>
+          <span>Christina Chance, Da Yin, Dakuo Wang, Kai-Wei Chang</a></span>
+	      <span>TrustNLP @ NAACL 2025</span>
+          <span>[<a href="https://aclanthology.org/2025.trustnlp-main.29/ target="_blank" rel="noopener noreferrer">PDF</a>]</span>
+	  
 	  <span class="title" style="font-weight:400">An Analysis of Large Language Models for African American English Speaking Children’s Oral Language Assessment
           </span>
           </span>
           <span>Alexander Johnson, Christina Chance, Kaycee Stiemke, Hariram Veeramani, Natarajan Balaji Shankar, Abeer Alwan</a></span>
+	      <span>Black Excellence in Engineering, Science & Technology Manuscripts</span>
           <span>[<a href="https://nsbejournal.scholasticahq.com/article/92286-an-analysis-of-large-language-models-for-african-american-english-speaking-children-s-oral-language-assessment" target="_blank" rel="noopener noreferrer">PDF</a>]</span>
 
 	<span class="title" style="font-weight:400">CORAAL QA: A Dataset and Framework for Open Domain Spontaneous Speech Question Answering from Long Audio Files 
           </span>
           </span>
           <span>Natarajan Balaji Shankar, Alexander Johnson, Christina Chance, Hariram Veeramani, Abeer Alwan</a></span>
-          <span>[ICASSP 2024]</span>
-	
-	  <span class="title" style="font-weight:400">Will the Prince Get True Love’s Kiss? On the Model Sensitivity to Gender Perturbation over
-Fairytale Texts 
-          </span>
-          </span>
-          <span>Christina Chance, Da Yin, Dakuo Wang, Kai-Wei Chang</a></span>
-          <span>[<a href="https://arxiv.org/abs/2310.10865" target="_blank" rel="noopener noreferrer">PDF</a>]</span>
+          <span>ICASSP 2024</span>
+	  	  <span>[<a href="https://ieeexplore.ieee.org/document/10447109/" target="_blank" rel="noopener noreferrer">PDF</a>]</span>
 
 	  <span class="title" style="font-weight:400">Leveraging Language Models to Detect Greenwashing
           </span>
           </span>
           <span>Avalon Vinella*, Margaret Capetz*, Rebecca Pattichis*, Christina Chance*, Reshmi Ghosh</a></span>
+	  	  <span>Arxiv</span>
           <span>[<a href="https://arxiv.org/abs/2311.01469" target="_blank" rel="noopener noreferrer">PDF</a>]</span>
 	  
-          <span class="title" style="font-weight:400">Zoom Audio Transcription Accuracy for African American Vernacular English
+       <span class="title" style="font-weight:400">Zoom Audio Transcription Accuracy for African American Vernacular English
           </span>
           </span>
           <span>Christina Chance, <a href="http://www.cs.emory.edu/~darnold/" target="_blank" rel="noopener noreferrer">Dorian Arnold</a></span>
@@ -96,7 +106,7 @@ Fairytale Texts
 	  <li> In Spring 2024 at UCLA, I was a TA for CS263 (Natural Language Processing), taught by Prof. Nanyun (Violet) Peng. I worked with a team of 3 other TA and about 110 students, helped create and grade assignments, exams, and course project, led weekly discussion sections, and hosted office hours to support students. </li>
 	  <li> In Winter 2024 at UCLA, I was a TA for CS162 (Natural Language Processing), taught by Prof. Nanyun (Violet) Peng. I worked with a team of 1 other TA and about 130 students, helped create and grade assignments, exams, and course project, led weekly discussion sections, and hosted office hours to support students. </li>
 	  <li> In Fall 2023 at UCLA, I was a TA for CS30 (Principles and Practices of Computing), taught by Prof. Todd Millstein. I worked with a team of 1 other TA, 2 LAs, and about 120 students, helped grade assignments, hosted office hours, and led a weekly discussion section.</li>
-          <li> In Spring 2022 at Emory University, I was a TA for <a href="http://www.cs.emory.edu/~nelsay2/cs377.html" target="_blank" rel="noopener noreferrer">CS377</a> (Database Systems), taught by <a href="http://www.cs.emory.edu/~nelsay2/" target="_blank" rel="noopener noreferrer">Prof. Nosayba El-Sayed</a>. I worked with a team of 1 other TA and about 40 students, helped grade assignments, and hosted office hours to support students.</li>
+      <li> In Spring 2022 at Emory University, I was a TA for <a href="http://www.cs.emory.edu/~nelsay2/cs377.html" target="_blank" rel="noopener noreferrer">CS377</a> (Database Systems), taught by <a href="http://www.cs.emory.edu/~nelsay2/" target="_blank" rel="noopener noreferrer">Prof. Nosayba El-Sayed</a>. I worked with a team of 1 other TA and about 40 students, helped grade assignments, and hosted office hours to support students.</li>
         </ul>
       </p>
     </div>
