--- a/index2.html
+++ b/index2.html
@@ -26,7 +26,7 @@
 	</div>
 	<div class="float-child-right" style="text-align:center;">
 	<ul>
-		<li><a style="font-size:150%;" href="art.html"><b>Art</b></a></li>
+		<li><a style="font-size:150%;" href="teaching.html"><b>Teaching</b></a></li>
 		<li><a style="font-size:150%;" href="research.html"><b>Research</b></a></li>
 		<li><a style="font-size:150%;" href="index.html"><b>About</b></a></li>
 	</ul>
