--- a/research.html
+++ b/research.html
@@ -18,7 +18,7 @@
  <div class="float-container" style="margin-top:40px;">
 <div class="buttons">
 	<div class="float-child-left" style="text-align:center;">
-		<p style="font-size:150%;"><b>Rebecca Pattichis</b></p>
+		<p style="font-size:150%;"><b>Christina Chance</b></p>
 	</div>
 	<div class="float-child-right" style="text-align:center;">
 	<ul>
@@ -32,7 +32,7 @@
  </div>
 	<br>
 	 
-  <h2>PUBLICATIONS</h2>
+  <h2>Publications</h2>
   <div>
 	<p class="paper">
 	<span class="title" style="font-weight:400">Re-imagining Virtual Communities: Ethical Guidelines for Studying Black Twitter
@@ -86,6 +86,15 @@
           <span>[<a href="https://etd.library.emory.edu/concern/etds/3n2040522" target="_blank" rel="noopener noreferrer">PDF</a>]</span>
   </p>
     </p>
+</div>
+	<h2>Trainging Programs</h2>
+<div>
+	<p>
+		<ul>
+		  <li> Cohort member of the 2025 <a href="https://www.aim-ahead.net/programs/aim-ahead-ncats-training-program/" target="_blank" rel="noopener noreferrer">AIM-AHEAD & NCATS Health Data Science Training Program</a>, where my team’s project, Artificial Intelligence Approaches to Clinical Prediction of 60-Day Mortality in Respiratory Infection (RI) with Smoking History: A Retrospective Cohort Study, received the Top Oral Presentation – Instructor’s Choice Award.</li>
+		</ul>
+    </p>
+
 </div>
 </div>
 </div>
