--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     <p>cchance [at] cs.ucla.edu</p>
     <p>
 	<!-- <a href="https://github.com/christinachance/" target="_blank" rel="noopener noreferrer">Github</a> | <a href="https://www.linkedin.com/in/miley-sinantha-hu-721214133/" target="_blank" rel="noopener noreferrer">LinkedIn</a> | <a href="https://twitter.com/christinachanc" target="_blank" rel="noopener noreferrer">Twitter</a> | <a href="/assets/documents/Christina_Chance_CV.pdf" target="_blank" rel="noopener noreferrer">CV</a> -->
-    	<a href="https://github.com/christinachance/" target="_blank" rel="noopener noreferrer">Github</a> | <a href="https://www.linkedin.com/in/christina-chance-147666166/" target="_blank" rel="noopener noreferrer">LinkedIn</a> | <a href="https://scholar.google.com/citations?user=btfwlCAAAAAJ&hl=en" target="_blank" rel="noopener noreferrer">Google Scholar</a> | <a href="/assets/documents/Christina_Chance_CV.pdf" target="_blank" rel="noopener noreferrer">CV</a>
+    	<a href="https://github.com/christinachance/" target="_blank" rel="noopener noreferrer">Github</a> | <a href="https://www.linkedin.com/in/christina-chance-147666166/" target="_blank" rel="noopener noreferrer">LinkedIn</a> | <a href="https://scholar.google.com/citations?user=btfwlCAAAAAJ&hl=en" target="_blank" rel="noopener noreferrer">Google Scholar</a> | <a href="/assets/documents/Christina_Chance_CV.pdf" target="_blank" rel="noopener noreferrer">Curriculum Vitae</a>
     </p>
     <!--<p><a href="/assets/documents/rebecca_CV_technical_2024.pdf" target="_blank" rel="noopener noreferrer">CV</a></p>-->
   </div>
