--- a/teaching.html
+++ b/teaching.html
@@ -21,10 +21,10 @@
 		<p style="font-size:150%;"><b>Christina Chance</b></p>
 	</div>
 	<div class="float-child-right" style="text-align:center;">
-	<ul>
-		<li><a style="font-size:150%;" href="teaching.html"><b>Teaching</b></a></li>
-		<li><a style="font-size:150%;" href="research.html"><b>Research</b></a></li>
-		<li><a style="font-size:150%;" href="index.html"><b>About</b></a></li>
+	<ul style="list-style:none; padding:0; margin:0; display:flex; justify-content:center; gap:20px;">
+	  <li><a style="font-size:150%;" href="teaching.html"><b>Teaching</b></a></li>
+	  <li><a style="font-size:150%;" href="research.html"><b>Research</b></a></li>
+	  <li><a style="font-size:150%;" href="index.html"><b>About</b></a></li>
 	</ul>
 	   <!--<p ><a style="font-size:150%;" href="index.html"><b>About</b></a> | <a style="font-size:150%;" href="research.html"><b>Research</b></a> | <a style="font-size:150%;" href="art.html"><b>Art</b></a></p>-->
   	</div>
