--- a/index.html
+++ b/index.html
@@ -52,14 +52,44 @@
 	<p>Hello, I’m Christina!</p>
       <p>I am a fourth-year PhD candidate in Computer Science at the University of California, Los Angeles advised by <a href="http://web.cs.ucla.edu/~kwchang/" target="_blank" rel="noopener noreferrer">Kai-Wei Chang</a>. 
       I am supported by the <a href="https://grad.ucla.edu/funding/financial-aid/funding-for-entering-students/eugene-v-cota-robles-fellowship/" target="_blank" rel="noopener noreferrer">Eugene V. Cota-Robles Fellowship</a> and the <a href="https://www.gemfellowship.org/">GEM Fellowship Program</a>. 
-      My research focuses on (1) the application of NLP methodologies for bias mitigation and quantification in social science, (2) the study of dialectical biases in existing machine learning systems, and (3) the assessment and development of community grounded content moderation approaches. This culminates under the goal of engaging with, studying, assessing, and critiquing socio-technical systems that people engage with in their everyday lives as well as developing more inclusive and equitable systems.</p>
-      <p>Previously, I received a Bachelor of Science in Computer Science and Mathematics with a minor in Physics from Emory University in 2022 where I was advised by Prof. Dorian Arnold and a Master of Science in Computer Science from the University of California, Los Angeles in 2025. </p>
-      
+      My research focuses on (1) the application of NLP methodologies for bias mitigation and quantification in social science, (2) the study of dialectical biases in existing machine learning systems, and (3) the assessment and development of community grounded content moderation approaches. This culminates under the goal of engaging with, studying, assessing, and critiquing socio-technical systems that people engage with in their everyday lives as well as developing more inclusive and equitable systems.</p>      
 		<p>Beyond this work, I love doing community service and watching anime!</p>
   	</div>
 
 </div>
 </div>
+<div style="flex:1; padding:20px; text-align:center; border-right:1px solid #ccc;">
+  <h2>Education</h2>
+
+  <div style="margin-bottom:20px;">
+    <h3>Ph.D. in Computer Science</h3>
+    <p>Eugene V. Cota-Robles Fellow, GEM Fellow</p>
+    <p>Sept. 2022 – Present</p>
+    <p><i>University of California, Los Angeles</i></p>
+  </div>
+
+  <div style="margin-bottom:20px;">
+    <h3>M.S. in Computer Science</h3>
+    <p>Sept. 2022 – June 2025</p>
+    <p><i>University of California, Los Angeles</i></p>
+  </div>
+
+  <div style="margin-bottom:20px;">
+    <h3>B.S. in Computer Science, Magna Cum Laude</h3>
+    <p>Aug. 2018 – May 2022</p>
+    <p><i>Emory University</i></p>
+  </div>
+</div>
+
+<!-- Right Section -->
+<div style="flex:1; padding:20px; text-align:center;">
+  <h2>Work Experience</h2>
+  <div>
+    <h3>Adobe Inc. – Research Intern</h3>
+    <p>June 2025 – September 2025</p>
+  </div>
+</div>
+
 
 <br>
 <div>
