--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 
 </div>
 </div>
-<div style="flex:1; padding:20px; text-align:center; border-right:1px solid #ccc;">
+<!-- <div style="flex:1; padding:20px; text-align:center; border-right:1px solid #ccc;">
   <h2>Education</h2>
 
   <div style="margin-bottom:20px;">
@@ -88,7 +88,7 @@
     <h3>Adobe Inc. – Research Intern</h3>
     <p>June 2025 – September 2025</p>
   </div>
-</div>
+</div> -->
 
 
 <br>
