--- a/index.html
+++ b/index.html
@@ -38,7 +38,9 @@
     <!-- For circle:  -->
     <!-- <img alt="image" style="width:180px;margin-bottom:20px;margin-right:20px;border-radius:100px;" src="assets/images/headshot.jpeg"> -->
     <!-- For square:  -->
-    <img alt="image" style="width:350px;margin-bottom:15px;border-radius:50%;" src="assets/images/headshot25.jpg">
+<!--     <img alt="image" style="width:350px;margin-bottom:15px;border-radius:50%;" src="assets/images/headshot25.jpg">
+	<img alt="image" style="max-width:100%; height:auto; border-radius:50%; margin-bottom:15px;" src="assets/images/headshot25.jpg"> -->
+
     <h1>Christina Chance</h1>
     <p>cchance [at] cs.ucla.edu</p>
     <p>
