--- a/index.html
+++ b/index.html
@@ -39,8 +39,23 @@
     <!-- <img alt="image" style="width:180px;margin-bottom:20px;margin-right:20px;border-radius:100px;" src="assets/images/headshot.jpeg"> -->
     <!-- For square:  -->
 <!--     <img alt="image" style="width:350px;margin-bottom:15px;border-radius:50%;" src="assets/images/headshot25.jpg">
-	<img alt="image" style="max-width:100%; height:auto; border-radius:50%; margin-bottom:15px;" src="assets/images/headshot25.jpg"> -->
+	  <img alt="image" style="max-width:100%; height:auto; border-radius:50%; margin-bottom:15px;" src="assets/images/headshot25.jpg"> -->
 
+
+	  
+<!--  <img alt="image" style="max-width:100%; height:auto; border-radius:50%; margin-bottom:15px;" src="assets/images/headshot25.jpg"> -->
+     <div style="max-width: 200px; margin: 0 auto;">
+	  <img 
+	    src="assets/images/headshot25.jpg" 
+	    alt="image" 
+	    style="
+	      width: 100%;
+	      height: auto;
+	      border-radius: 50%;
+	      margin-bottom: 15px;
+	      display: block;
+	    ">
+	</div>
     <h1>Christina Chance</h1>
     <p>cchance [at] cs.ucla.edu</p>
     <p>
@@ -84,13 +99,13 @@
 </div>
 
 <!-- Right Section -->
-<div style="flex:1; padding:20px; text-align:center;">
+<!-- <div style="flex:1; padding:20px; text-align:center;">
   <h2>Work Experience</h2>
   <div>
     <h3>Adobe Inc. – Research Intern</h3>
     <p>June 2025 – September 2025</p>
   </div>
-</div> -->
+</div> --> -->
 
 
 <br>
