--- a/index.html
+++ b/index.html
@@ -21,17 +21,18 @@
   <div class="wrapper">
 <div class="float-container" style="margin-top:40px;">
 	<div class="buttons">
-	<div class="float-child-left" style="text-align:center;">
-		<p style="font-size:150%;"><b>Christina Chance</b></p>
+	<div class="header-top">
+	  <div class="header-name">
+	    <p style="font-size:150%;"><b>Christina Chance</b></p>
+	  </div>
+	  <div class="header-nav">
+	    <ul>
+	      <li><a href="index.html"><b>About</b></a></li>
+	      <li><a href="research.html"><b>Research</b></a></li>
+	      <li><a href="teaching.html"><b>Teaching</b></a></li>
+	    </ul>
+	  </div>
 	</div>
-	<div class="float-child-right" style="text-align:center;">
-	<ul style="list-style:none; padding:0; margin:0; display:flex; flex-wrap:wrap; justify-content:flex-end; gap:10px;">
-	  <li><a style="font-size:120%;" href="teaching.html"><b>Teaching</b></a></li>
-	  <li><a style="font-size:120%;" href="research.html"><b>Research</b></a></li>
-	  <li><a style="font-size:120%;" href="index.html"><b>About</b></a></li>
-	</ul>
-	   <!--<p ><a style="font-size:150%;" href="index.html"><b>About</b></a> | <a style="font-size:150%;" href="research.html"><b>Research</b></a> | <a style="font-size:150%;" href="art.html"><b>Art</b></a></p>-->
-  	</div>
 	</div>
 	<br>
   <div class="float-child-left" style="text-align:center;">
@@ -44,17 +45,8 @@
 
 	  
 <!--  <img alt="image" style="max-width:100%; height:auto; border-radius:50%; margin-bottom:15px;" src="assets/images/headshot25.jpg"> -->
-     <div style="max-width: 200px; margin: 0 auto;">
-	  <img 
-	    src="assets/images/headshot25.jpg" 
-	    alt="image" 
-	    style="
-	      width: 100%;
-	      height: auto;
-	      border-radius: 50%;
-	      margin-bottom: 15px;
-	      display: block;
-	    ">
+     <div class="headshot-wrapper">
+	  <img src="assets/images/headshot25.jpg" alt="Christina Chance">
 	</div>
     <h1>Christina Chance</h1>
     <p>cchance [at] cs.ucla.edu</p>
@@ -105,7 +97,7 @@
     <h3>Adobe Inc. – Research Intern</h3>
     <p>June 2025 – September 2025</p>
   </div>
-</div> --> -->
+</div> --> 
 
 
 <br>
