--- a/index_1.html
+++ b/index_1.html
@@ -1,4 +1,26 @@
-<div class="header-container">
+<!DOCTYPE html>
+<html>
+  <head>
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+
+  <title>Christina Chance</title>
+  <link rel="icon" type="image/x-icon" href="assets/images/favicon.png">
+  <meta name="description" content="">
+  <link href="//fonts.googleapis.com/css?family=Raleway:100,400,300,600" rel="stylesheet" type="text/css">
+  <link href='https://fonts.googleapis.com/css?family=PT+Sans:400,700,400italic,700italic|Source+Sans+Pro:400,700,200,300|Josefin+Sans:400,600,700,300' rel='stylesheet' type='text/css'>
+  <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css" rel="stylesheet">
+
+  <link rel="stylesheet" href="assets/css/style.css">
+</head>
+
+
+  <body>
+  <div class="wrapper">
+<div class="float-container" style="margin-top:40px;">
+	<div class="buttons">
+	<div class="header-container">
   <div class="headshot-wrapper">
     <img src="assets/images/headshot25.jpg" alt="Christina Chance">
   </div>
@@ -25,3 +47,18 @@
     </ul>
   </div>
 </div>
+
+<br>
+<div>
+	<p><i>Acknowledgement: This website uses the design and template from <a href="https://rpattichis.github.io/index.html" target="_blank" rel="noopener noreferrer">Rebecca Pattichis</a>,  <a href="https://cs.stanford.edu/~ssagawa/" target="_blank" rel="noopener noreferrer">Shiori Sagawa</a>, and <a href="https://amitakamath.github.io/" target="_blank" rel="noopener noreferrer">Amita Kamath</a>.</i></p>
+</div>
+
+<br>
+
+      </div>
+    </div>
+
+
+  </body>
+
+</html>
