--- a/index.html
+++ b/index.html
@@ -22,7 +22,20 @@
 	<div class="buttons">
 	<div class="header-container">
   <div class="headshot-wrapper">
+	   <ul class="nav-links">
+      <li><a href="index.html"><b>About</b></a></li>
+      <li><a href="research.html"><b>Research</b></a></li>
+      <li><a href="teaching.html"><b>Teaching</b></a></li>
+    </ul>
     <img src="assets/images/headshot25.jpg" alt="Christina Chance">
+    
+    <!-- Links directly under photo -->
+    <p class="contact-links">
+      <a href="https://github.com/christinachance/" target="_blank">Github</a> | 
+      <a href="https://www.linkedin.com/in/christina-chance-147666166/" target="_blank">LinkedIn</a> | 
+      <a href="https://scholar.google.com/citations?user=btfwlCAAAAAJ&hl=en" target="_blank">Google Scholar</a> | 
+      <a href="/assets/documents/Christina_Chance_CV.pdf" target="_blank">Curriculum Vitae</a>
+    </p>
   </div>
 
   <div class="header-text">
@@ -33,19 +46,11 @@
     
     <p>Beyond this work, I love doing community service and watching anime!</p>
 
-    <p>
-      <a href="https://github.com/christinachance/" target="_blank">Github</a> | 
-      <a href="https://www.linkedin.com/in/christina-chance-147666166/" target="_blank">LinkedIn</a> | 
-      <a href="https://scholar.google.com/citations?user=btfwlCAAAAAJ&hl=en" target="_blank">Google Scholar</a> | 
-      <a href="/assets/documents/Christina_Chance_CV.pdf" target="_blank">Curriculum Vitae</a>
-    </p>
+    <!-- Navigation tabs -->
 
-    <ul class="nav-links">
-      <li><a href="index.html"><b>About</b></a></li>
-      <li><a href="research.html"><b>Research</b></a></li>
-      <li><a href="teaching.html"><b>Teaching</b></a></li>
-    </ul>
   </div>
+</div>
+
 </div>
 
 <br>
