--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 	  
 <!--  <img alt="image" style="max-width:100%; height:auto; border-radius:50%; margin-bottom:15px;" src="assets/images/headshot25.jpg"> -->
      <div class="headshot-wrapper">
-	  <img src="assets/images/headshot25_2.jpg" alt="Christina Chance">
+	  <img src="assets/images/headshot25_2.jpeg" alt="Christina Chance">
 	</div>
     <h1>Christina Chance</h1>
     <p>cchance [at] cs.ucla.edu</p>
