--- a/research.html
+++ b/research.html
@@ -40,13 +40,13 @@
           </span>
           <span><u>Christina Chance</u>, Kai-Wei Chang</a></span>
 	  	  <span>AIES 2025</span>
-<!--           <span>[<a href="https://nsbejournal.scholasticahq.com/article/92286-an-analysis-of-large-language-models-for-african-american-english-speaking-children-s-oral-language-assessment" target="_blank" rel="noopener noreferrer">PDF</a>]</span>
-		   -->
+	  		<span>[<a href="https://ojs.aaai.org/index.php/AIES/article/view/36569" target="_blank" rel="noopener noreferrer">PDF</a>]</span>
+
 	  <span class="title" style="font-weight:400">ModelCitizens: Representing Community Voices in Online Safety
           </span>
           </span>
           <span>Ashima Suvarna, <u>Christina Chance</u>, Karolina Naranjo, Hamid Palangi, Sophie Hao, Thomas Hartvigsen, Saadia Gabriel</a></span>
-	      <span>Under Review</span>
+	      <span>EMNLP 2025</span>
           <span>[<a href="https://arxiv.org/abs/2507.05455" target="_blank" rel="noopener noreferrer">PDF</a>]</span>
     
     <span class="title" style="font-weight:400">Will the Prince Get True Love’s Kiss? On the Model Sensitivity to Gender Perturbation over Fairytale Texts 
